--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.9",
     "expo": "~51.0.28",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
@@ -30,7 +32,8 @@
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.7.1"
+    "react-native-svg": "^15.7.1",
+    "secure": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
