--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
