--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
-    "expo-blur": "~13.0.2",
-    "expo-constants": "~16.0.2",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
-    "lottie-react-native": "^7.0.0",
+    "expo": "^52.0.25",
+    "expo-blur": "~14.0.2",
+    "expo-constants": "~17.0.4",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.16",
+    "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "7.1.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.15.4",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.7.1"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
