--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-native-community/blur": "^4.4.1",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "expo": "^52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
-    "expo-router": "~4.0.16",
+    "expo-router": "^4.0.16",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
