--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
     "secure": "^0.1.3"
   },
   "devDependencies": {
