--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
+    "lucide-react-native": "^0.472.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.6",
@@ -36,6 +37,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
+    "reactdom": "^2.0.0",
     "secure": "^0.1.3"
   },
   "devDependencies": {
