--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.0.3",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/native-stack": "^7.2.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "expo": "^52.0.25",
     "expo-blur": "~14.0.2",
@@ -23,6 +24,8 @@
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
     "nativewind": "^2.0.11",
+    "postcss": "^8.5.1",
+    "postcss-import": "^16.1.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-chart-kit": "^6.12.0",
