--- a/app.json
+++ b/app.json
@@ -27,7 +27,9 @@
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-image-picker"
+        
     ]
   }
 }
