--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
+    "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-router": "^4.0.16",
@@ -35,6 +36,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
