--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "reactdom": "^2.0.0",
+    "recoil": "^0.7.7",
     "secure": "^0.1.3"
   },
   "devDependencies": {
