--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^7.2.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "cloudinary": "^2.5.1",
+    "cloudinary-core": "^2.13.1",
     "expo": "^52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
