--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.3.1",
