Update tournament management components and dependencies
- Updated expo dependency version in package.json from 52.0.25 to 52.0.42.
- Added react-native-feather dependency to package.json.
- Created TeamPlayersView component for displaying players in a tournament.
- Implemented fetching and displaying players based on selected tournament and stage.
- Created TournamentSelect component for managing and joining tournaments.
- Added functionality to fetch joined and available tournaments, with appropriate UI updates.
- Enhanced user experience with loading indicators and alerts for error handling.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
     "cloudinary-core": "^2.13.1",
-    "expo": "^52.0.25",
+    "expo": "^52.0.42",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-image-picker": "~16.0.4",
@@ -37,6 +37,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
+    "react-native-feather": "^1.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
