--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-tab-view": "^4.0.10",
     "react-native-web": "~0.19.13",
     "reactdom": "^2.0.0",
     "recoil": "^0.7.7",
