--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "@expo/vector-icons": "^14.0.3",
     "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-community/blur": "^4.4.1",
-    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
     "cloudinary-core": "^2.13.1",
     "expo": "^52.0.42",
-    "expo-blur": "~14.0.2",
+    "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.4",
-    "expo-image-picker": "~16.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.4",
-    "expo-router": "^4.0.16",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
@@ -32,7 +33,7 @@
     "postcss": "^8.5.1",
     "postcss-import": "^16.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "^0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.6",
