--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
     "lucide-react-native": "^0.472.0",
+    "moti": "^0.30.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.5.1",
     "postcss-import": "^16.1.0",
